--- a/structure/apps.mdx
+++ b/structure/apps.mdx
@@ -1,6 +1,7 @@
 ---
 title: 应用程序
 description: next-forge 的应用程序
+icon: ghost
 ---
 
 next-forge 是一个 monorepo（单体仓库），这意味着它在一个代码仓库中包含多个软件包。这是现代 Web 应用程序的常见模式，因为它允许你在应用程序的不同部分之间共享代码，并统一管理它们。
