--- a/structure/package.mdx
+++ b/structure/package.mdx
@@ -1,6 +1,7 @@
 ---
-title: Packages
-description: next-forge 的包组件
+title: 依赖管理
+description: next-forge 的依赖管理,
+icon: cube
 ---
 
 next-forge 包含多个在整个 monorepo 中共享的包。这些包的目的是将共享代码与主应用隔离，使其更容易管理和更新。
