--- a/analytics/web.mdx
+++ b/analytics/web.mdx
@@ -6,7 +6,7 @@ icon: chart-line
 
 next-forge 通过 Vercel Analytics 提供网站分析功能 — 这是一个专注于网站性能和使用情况的分析平台。
 
-## 使用方法
+## 使用方法 / Usage
 
 要启用网站分析，你需要在项目的根目录下配置 `next.config.js`：
 
@@ -20,7 +20,7 @@ module.exports = {
 };
 ```
 
-## 可用指标
+## 可用指标 / Available Metrics
 
 Vercel Analytics 提供以下关键指标：
 
@@ -30,7 +30,7 @@ Vercel Analytics 提供以下关键指标：
 - **设备类型** - 了解访客使用的设备类型
 - **性能指标** - 监控网站性能和加载时间
 
-## 实时数据
+## 实时数据 / Real-Time Data
 
 你可以在 Vercel 仪表板中实时查看这些指标：
 
@@ -39,7 +39,7 @@ Vercel Analytics 提供以下关键指标：
 3. 点击 "Analytics" 标签页
 4. 查看实时和历史数据
 
-## 自定义事件
+## 自定义事件 / Custom Events
 
 除了默认的页面浏览跟踪外，你还可以添加自定义事件跟踪：
 
@@ -50,7 +50,7 @@ import { track } from '@vercel/analytics';
 track('Button Clicked', { buttonId: 'signup' });
 ```
 
-## 数据导出
+## 数据导出 / Data Export
 
 你可以通过 Vercel Analytics API 导出原始数据进行深入分析：
 
